Finished adding TTS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string-array name="languagesSpinner">
         <item>Japanese</item>
         <item>Spanish</item>
-        <item>French</item>
+        <item>English</item>
         <item>Mandarin</item>
     </string-array>
 </resources>
